--- a/themes/my7chakras/sass/_front-page.scss
+++ b/themes/my7chakras/sass/_front-page.scss
@@ -49,7 +49,9 @@
             line-height: 1.18;
             margin: 0px;
 
-            
+            @include tb{
+                font-size: 1rem;
+            }
             
         }
 
@@ -59,6 +61,9 @@
             font-size: 1.05rem;
             line-height: 1.18;
             letter-spacing: 0.15px;
+            @include tb{
+                font-size: 1rem!important;
+            }
         }
 
         .more{
@@ -79,10 +84,17 @@
             position: relative;  
             width: 100%;
             height: 321px;
+            @include tb{
+                height: 220px;
+            }
 
 
             img{
                 height: 321px;
+
+                @include tb{
+                    height: 220px;
+                }
             }
   
 
@@ -139,6 +151,11 @@
             background-position-x: unset;
             height: 50vw;
 
+            @include tb{
+                background-size: 139%;
+                height: 62vw;
+            }
+
         }
         // @include color-gradient;
         background-image: url(../../assets/logo/background-phone.svg);
@@ -180,6 +197,9 @@
                 @include reset;
                 width: 90%;
                 margin: 2% auto;
+                @include tb{
+                    margin: 0% auto;
+                }
             }
     
         }
@@ -190,7 +210,11 @@
                 margin-top: 3%;
 
                 font-size: 3.4375rem;
+            
+            @include tb{
+                font-size: 2.5rem;
             }
+        }
         }
     }
 
@@ -238,6 +262,11 @@
                     height: 450px;
                     right: 35%;
                 }
+
+                @include tb{
+                    right: 8%;
+                    
+                }
             }
         }
 
@@ -281,11 +310,16 @@
                     font-size: unset;
                 }
             }
-            @include pcandtb{
-            width: 23%;
 
+            @include pcandtb{
+                width: 23%;
                 font-size: 3.4375rem;
+                @include tb{
+                    font-size: 2rem;
+                }
             }
+
+
         }
         p:last-child{
             display: none;
@@ -313,6 +347,11 @@
             p{
                 @include reset;
                 width: 45%;
+                text-align: justify;
+                @include tb{
+                    width: 90%;
+    
+                    }
             }
 
             figure{
@@ -408,6 +447,10 @@
                 flex-direction: column;
                 width: 45%;
                 justify-content: center;
+                @include tb{
+                    width: 90%;
+                    margin: 2% auto;
+                    }
             }
     
         }
@@ -419,6 +462,12 @@
     width: 90%;
     margin: 5% auto;
     order: 4;
+
+    p{
+        @include tb{
+            font-size: 16px;
+            }
+    }
     
 
     h1{
