--- a/themes/my7chakras/sass/_header.scss
+++ b/themes/my7chakras/sass/_header.scss
@@ -250,6 +250,10 @@ fieldset{
         @include pcandtb{
 
             width: fit-content;
+
+            i{
+                margin-left: 10px;
+            }
         }
         
     }
@@ -260,27 +264,27 @@ fieldset{
             content: "+";
             color: $purple;
             @include pcandtb{
-                transition: 1s all ;
-                margin-left: 20%;
-                font-size: 1.2rem;
-                color: rgb(80, 80, 80);
-                content: "<";
-                font-weight: 300;
-                transform: rotate(270deg);
+                content: unset;
             } 
     }
 }
 
 .close-icon{
+    i{
+        margin-left: 10px;
+        transition: all 1s;
+        -webkit-transform: rotate(180deg);
+        -moz-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        transform: rotate(180deg);
+
+    }
     .icon-menu:after{
-        
         font-size: 2.5rem;
         content: "-";
         @include pcandtb{
-            font-size: 1.2rem;
-            transition: 1s all;
-            content: "<";
-            transform: rotate(90deg);
+            content: unset;
         } 
     }
 }
