--- a/themes/my7chakras/sass/_header.scss
+++ b/themes/my7chakras/sass/_header.scss
@@ -252,6 +252,8 @@ fieldset{
             width: fit-content;
 
             i{
+        transition: all 1s;
+
                 margin-left: 10px;
             }
         }
@@ -295,14 +297,13 @@ fieldset{
 .search-bar{
 
     height: fit-content;
-    margin-bottom: 10%;
 }
 
 
 
 
 .change-color{
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 
@@ -331,3 +332,11 @@ fieldset{
 }
 
 
+.overlay-body{
+    display: none;
+    position: absolute;
+    background-color: $white;
+    width: 100%;
+    opacity: 0.6;
+    height: 100vh;
+}
